# trsf

./: .env.sample  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
tests/: test_trsf.py
trsf/: __init__.py  format.py  main.py
