[metadata]
name = trsf
version = 0.1.0
author = Tebin Raouf
author_email = tebin.raouf@gmail.com
description = A CLI tool that suggests fixes for shell command errors.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tebinraouf/trsf
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    requests
    typer
    python-dotenv
python_requires = >=3.6

[options.entry_points]
console_scripts =
    trsf = trsf.main:app
